--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,17 @@
 Package: spTest
 Title: Nonparametric Hypothesis Tests of Isotropy and Symmetry
-Date: 2015-05-08
-Version: 0.1.0
+Date: 2015-07-21
+Version: 0.1.1
 Authors@R: person('Zachary', 'Weller', email = 'wellerz@stat.colostate.edu', role = c('aut', 'cre'))
 Description: Implements nonparametric hypothesis tests to check isotropy and symmetry properties for two-dimensional spatial data.
+Imports: stats
 Suggests: mvtnorm, geoR, fields
 Depends: R (>= 3.0.0)
 License: GPL (>= 2)
 LazyData: true
-Packaged: 2015-05-09 15:25:15 UTC; ZachWeller
+Packaged: 2015-07-23 15:49:07 UTC; ZachWeller
 Author: Zachary Weller [aut, cre]
 Maintainer: Zachary Weller <wellerz@stat.colostate.edu>
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2015-05-09 23:14:58
+Date/Publication: 2015-07-24 07:54:17
