--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,9 @@
 importFrom("stats", "cov", "dnorm", "integrate", "pchisq", "rf", "sd")
+importFrom("methods", "new", "setMethod", "setClass")
 export(GuanTestGrid)
 export(GuanTestUnif)
 export(LuTest)
 export(MaityTest)
 export(coords.aniso)
+export(print.htestIso)
+S3method(print, htestIso)
