--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,19 @@
 Package: spTest
 Title: Nonparametric Hypothesis Tests of Isotropy and Symmetry
-Date: 2015-09-23
-Version: 0.2.2
+Date: 2015-11-10
+Version: 0.2.3
 Authors@R: person('Zachary', 'Weller', email = 'wellerz@stat.colostate.edu', role = c('aut', 'cre'))
-Description: Implements nonparametric hypothesis tests to check isotropy and symmetry properties for two-dimensional spatial data.
-Imports: stats, fields
-Suggests: mvtnorm, geoR
+Description: Implements nonparametric hypothesis tests to check isotropy and
+    symmetry properties for two-dimensional spatial data.
+Imports: stats,fields,methods
+Suggests: mvtnorm,geoR
 Depends: R (>= 3.0.0)
 License: CC0
 LazyData: TRUE
-Packaged: 2015-09-23 19:39:24 UTC; ZachWeller
+RoxygenNote: 5.0.0
+NeedsCompilation: no
+Packaged: 2015-11-10 17:24:30 UTC; ZachWeller
 Author: Zachary Weller [aut, cre]
 Maintainer: Zachary Weller <wellerz@stat.colostate.edu>
-NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2015-09-24 12:04:53
+Date/Publication: 2015-11-10 19:04:31
